fix: add styles for dark mode: card, chips, table

--- a/src/assets/styles/components/_card.scss
+++ b/src/assets/styles/components/_card.scss
@@ -157,3 +157,8 @@
     }
   }
 }
+[data-theme="dark"] {
+  .card {
+    border-color: var(--grey-30);
+  }
+}
