--- a/src/assets/styles/components/_tablev2.scss
+++ b/src/assets/styles/components/_tablev2.scss
@@ -429,7 +429,7 @@
     .sticky {
       position: sticky;
       top: 0;
-      background: white;
+      background: var(--grey-0);
       z-index: 1;
       border-bottom: 1px solid var(--grey-200) !important;
       padding: 0 var(--space-16);
